[package]
name = "psyche_assistant"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
radio = "0.12.1"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
config = "0.15.19"
rustpotter = "3.0.2"
whisper-rs = "0.15.1"
cpal = "0.17.1"
hound = "3.5.1"
rand = "=0.8.5"
half = { version = "=2.3.1", features = ["rand_distr"] }
